## Process this file with automake to produce Makefile.in

# Calibration files to distribute
caldb_prod2_indxdir      = $(datadir)/caldb/data/cta/prod2
caldb_prod2_indx_DATA    = data/cta/prod2/caldb.indx
caldb_prod2_north1dir    = $(datadir)/caldb/data/cta/prod2/bcf/North_0.5h
caldb_prod2_north1_DATA  = data/cta/prod2/bcf/North_0.5h/irf_file.fits.gz
caldb_prod2_north2dir    = $(datadir)/caldb/data/cta/prod2/bcf/North_5h
caldb_prod2_north2_DATA  = data/cta/prod2/bcf/North_5h/irf_file.fits.gz
caldb_prod2_north3dir    = $(datadir)/caldb/data/cta/prod2/bcf/North_50h
caldb_prod2_north3_DATA  = data/cta/prod2/bcf/North_50h/irf_file.fits.gz
#
caldb_prod2_south1dir    = $(datadir)/caldb/data/cta/prod2/bcf/South_0.5h
caldb_prod2_south1_DATA  = data/cta/prod2/bcf/South_0.5h/irf_file.fits.gz
caldb_prod2_south2dir    = $(datadir)/caldb/data/cta/prod2/bcf/South_5h
caldb_prod2_south2_DATA  = data/cta/prod2/bcf/South_5h/irf_file.fits.gz
caldb_prod2_south3dir    = $(datadir)/caldb/data/cta/prod2/bcf/South_50h
caldb_prod2_south3_DATA  = data/cta/prod2/bcf/South_50h/irf_file.fits.gz
